--- a/about.html
+++ b/about.html
@@ -9,10 +9,6 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <!-- <link href="assets/img/favicon.png" rel="icon"> -->
-  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -26,13 +22,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Kelly - v4.3.0
-  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -86,27 +75,28 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Web Developer</h3>
             <p class="fst-italic">
+              I am a junior web developer seeking a position in web development where I can apply my knowledge and skills for continuous improvement.
               I'm very much welcome to new technologies anytime and can adapt to new environment easily.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 2 July 1997</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> https://vatsalshah.netlify.app/</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> https://vatsalshah.netlify.app</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +91 8401942365</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> City : Ahmedabad, India</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Ahmedabad, India</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 24</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> B.E</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>PhEmailone:</strong> vatsalshah2797@gmail.com</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> vatsalshah2797@gmail.com</li>
                   <!-- <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li> -->
                 </ul>
               </div>
             </div>
-            <p>Experienced Developer with a demonstrated history of working in the Information Technology and Automation industry. Skilled in Web Development - HTML, CSS, JS, jQuery, MySQL, PHP, Laravel, Codeigniter & WordPress and In Industrial Automation - PLC, SCADA & HMI Programming. Strong problem solving and engineering professional with a Bachelor of Engineering focused in Web Development, Instrumentation & Control from Vishwakarma Government Engineering College.
+            <p>Experienced Developer with a demonstrated history of working in the Information Technology and Automation industry. Strong problem solving and engineering professional with a Bachelor of Engineering focused in Web Development, Instrumentation & Control from Vishwakarma Government Engineering College.
             </p>
           </div>
         </div>
@@ -120,8 +110,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+          <p>Skilled in Web Development - HTML, CSS, JS, jQuery, MySQL, PHP, Laravel, Codeigniter & WordPress and In Industrial Automation - PLC, SCADA & HMI Programming. </p></div>
 
         <div class="row skills-content">
 
@@ -148,26 +137,40 @@
               </div>
             </div>
 
-          </div>
-
-          <div class="col-lg-6">
-
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">jQuery <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
+          </div>
+
+          <div class="col-lg-6">
+
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">PHP <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">MySQL <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">WordPress/CMS <i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Laravel <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -191,25 +194,25 @@
 
         <div class="row counters">
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+          <div class="col-lg-4 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1" class="purecounter"></span>
             <p>Clients</p>
           </div>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+          <div class="col-lg-4 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
             <p>Projects</p>
           </div>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
+          <div class="col-lg-4 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="3285" data-purecounter-duration="1" class="purecounter"></span>
             <p>Hours Of Support</p>
           </div>
 
-          <div class="col-lg-3 col-6 text-center">
+          <!-- <div class="col-lg-3 col-6 text-center">
             <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
             <p>Hard Workers</p>
-          </div>
+          </div> -->
 
         </div>
 
@@ -298,7 +301,8 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section>
+    <!-- End Testimonials Section -->
 
   </main><!-- End #main -->
 
@@ -306,14 +310,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Vatsal</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://vatsalshah.netlify.app">Vatsal Shah</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
