--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Vatsal Shah</h1>
-      <h2>I'm a Web Developer</h2>
+      
+      <h1 style="text-align: center;">Hello, I am  Vatsal Shah, a web developer with specialized in back end. </h1>
+      <h4 style="margin: 15px;">Welcome to my portfolio. I am happy to see you here.</h4>
+      <!-- <h4 style="margin: 15px;">I am a creative web developer.</h4> -->
       <a href="about.html" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
