--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Web Developer</h3>
             <p class="fst-italic">
-              I am a junior web developer seeking a position in web development where I can apply my knowledge and skills for continuous improvement.
+              I am a web developer seeking a position in web development where I can apply my knowledge and skills for continuous improvement.
               I'm very much welcome to new technologies anytime and can adapt to new environment easily.
             </p>
             <div class="row">
@@ -163,9 +163,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">60%</i></span>
+              <span class="skill">WordPress/CMS <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
