--- a/resume.html
+++ b/resume.html
@@ -65,7 +65,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I am a junior web developer seeking a position in web development where I can apply my knowledge and skills for continuous improvement. </p>
+          <p>I am a web developer seeking a position in web development where I can apply my knowledge and skills for continuous improvement. </p>
         </div>
 
         <div class="row">
@@ -119,7 +119,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Junior Developer</h4>
+              <h4>Web Developer</h4>
               <h5>2020 - Present</h5>
               <p><em>Horizoncore Infosoft, Ahmedabad.</em></p>
               <p>
