update contact message

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
         <div class="section-title">
           <h2>Let's Connect</h2>
-          <p>Have some questions ? Feel free to ask. I will ready to work with you.</p>
+          <p>Have some questions ? Feel free to ask. I am willing to assist you!</p>
         </div>
 
         <!-- <div>
