--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>CV</h2>
           <p>I am a web developer seeking a position in web development where I can apply my knowledge and skills for continuous improvement. </p>
         </div>
 
@@ -73,7 +73,8 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Vatsal Shah</h4>
-              <p><em>Problem solver and quick learner Web Developer with 1+ years of experience in designing and developing web application.</em></p>
+              <h5>PHP | Laravel | CodeIgniter | Problem Solver | Curious Learner | Tech Supporter | Believe In Team Work | IT Trainer</h5>
+              <p><em>Problem solver and quick learner Web Developer with 2+ years of experience in designing and developing web application.</em></p>
               <p>
               <ul>
                 <!-- <li>Portland par 127,Orlando, FL</li> -->
@@ -100,7 +101,7 @@
               <p>Databases: MySQL, PostgreSQL</p>
             </div>
 
-            <h3 class="resume-title">Soft Skills</h3>
+            <h3 class="resume-title">Soft & Hard Skills</h3>
             <div class="resume-item">
               <p>Good at logic, math and critical thinking</p>
               <p>Ability in learning new concepts quickly, working well under pressure and communicating ideas effectively</p>
