--- a/resume.html
+++ b/resume.html
@@ -103,10 +103,11 @@
 
             <h3 class="resume-title">Soft & Hard Skills</h3>
             <div class="resume-item">
-              <p>Good at logic, math and critical thinking</p>
-              <p>Ability in learning new concepts quickly, working well under pressure and communicating ideas effectively</p>
-              <p>Problem solving</p>
-              <p>Troubleshooting & debugging</p>
+              <p>Good at logic, math and critical thinking.</p>
+              <p>Ability in learning new concepts quickly, working well under pressure and communicating ideas effectively.</p>
+              <p>Problem solving.</p>
+              <p>Troubleshooting & debugging.</p>
+              <p>Project management, Team management, Multi tasking, Multiple project handling, Client communication, Working on a multiple framework, Document application process, Trains people, Tech supporter, Technical recruiting, Interview and many more things. </p>
             </div>
 
 
@@ -120,18 +121,18 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Web Developer</h4>
+              <h4>Sr. Developer</h4>
               <h5>2020 - Present</h5>
               <p><em>Horizoncore Infosoft, Ahmedabad.</em></p>
               <p>
               <ul>
-                <li>Design & development of  web application on windows based software application using HTML, CSS, Javascript, jQuery, Ajax, MySQL & PHP</li>
-                <li>Involved in developing interactive web applications using a dynamic scripting language like javascript & php</li>
-                <li>Testing and debugging the code in order to ensure quality and productivity of the development</li>
-                <li>Used the model view controller (MVC) framework to build modular and maintainable applications</li>
-                <li>Recommended and communicated with clients on the most appropriate design and development</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Delegate tasks to the 6 members of the development team and provide counsel on all aspects of the project</li>
+                <li>Design & development of  web application on windows based software application using HTML, CSS, Javascript, jQuery, Ajax, MySQL, PHP & Laravel.</li>
+                <li>Involved in developing interactive web applications using a dynamic scripting language like javascript & php.</li>
+                <li>Testing and debugging the code in order to ensure quality and productivity of the development.</li>
+                <li>Used the model view controller (MVC) framework to build modular and maintainable applications.</li>
+                <li>Recommended and communicated with clients on the most appropriate design and development.</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure.</li>
+                <li>Delegate tasks to the 6 members of the development team and provide counsel on all aspects of the project.</li>
               </ul>
               </p>
             </div>
